src/objects/FSTR__PCE_Callout_Error_Queue__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <fields>
        <fullName>FSTR__Email__c</fullName>
        <description>Notification email for web service callout errors (optional)</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FSTR__Error_Text__c</fullName>
        <description>The error from the failed callout attempt.</description>
        <label>Error Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Retry_Count__c</fullName>
        <description>Number of retries attempted to send a failed web service callout.</description>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Web_Service_Callout_Body__c</fullName>
        <label>Web Service Callout Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Web_Service_Callout_Headers__c</fullName>
        <label>Web Service Callout Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Web_Service_Callout_Method__c</fullName>
        <label>Web Service Callout Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>HEAD</fullName>
                </value>
                <value>
                    <fullName>TRACE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Web_Service_Callout_URL__c</fullName>
        <label>Web Service Callout URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Callout Error Queue</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Callout Error Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Error Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>